<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_doc_doctor_info"
            android:layout_width="@dimen/image_sub_icon"
            android:layout_height="@dimen/image_sub_icon"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="@dimen/button_horizontal_margins"
            android:layout_marginTop="16dp"
            android:src="@drawable/default_profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_doctor_name_doctor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_doctor"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/text_tertiary_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_specialty_doctor_info"
            app:layout_constraintStart_toEndOf="@+id/img_doc_doctor_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_specialty_doctor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_specialty"
            android:textColor="@color/text_color_quinary"
            android:textSize="@dimen/text_quaternary_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_doctor_name_doctor_info"
            app:layout_constraintTop_toBottomOf="@+id/txt_doctor_name_doctor_info" />

        <TextView
            android:id="@+id/txt_note_doctor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/special_note"
            android:textColor="@color/text_color_quaternary"
            android:textSize="@dimen/text_quinary_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_specialty_doctor_info"
            app:layout_constraintTop_toBottomOf="@+id/txt_specialty_doctor_info" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
